<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="be.pxl.speelenlees.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_homescreen" />

    <fragment
        android:id="@+id/nav_add_client"
        android:name="be.pxl.speelenlees.activities.ui.home.InsertFragment"
        android:label="@string/menu_add_member" />

    <fragment
        android:id="@+id/nav_show_clients"
        android:name="be.pxl.speelenlees.activities.MasterDetailFragment"
        android:label="@string/menu_show_members"
        tools:layout="@layout/fragment_master_detail" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="be.pxl.speelenlees.activities.ui.home.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_homescreen" />

</navigation>