<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".activities.LogInActivity">

    <ImageView
        android:src="@drawable/logo2"
        android:layout_width="290dp"
        android:layout_height="281dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="0dp"/>

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/email"
        android:textSize="22sp"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="70dp"
        android:backgroundTint="@color/darkgray"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textColorHint="@color/darkgray"
        android:textCursorDrawable="@color/darkgray"
         />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:textSize="22sp"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="70dp"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/darkgray"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textColorHint="@color/darkgray"
        android:textCursorDrawable="@color/darkgray"
         />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="445dp"
        android:layout_marginLeft="75dp"
        android:background="@color/orange"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/cb_remember_me"
        android:text="@string/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="140dp"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:button="@drawable/checkbox"
        android:textColor="@color/orange"/>


</RelativeLayout>