<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/warmgray" />

        <TextView
            android:id="@+id/firstname_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/detail_firstname"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/orange"/>

        <TextView
            android:id="@+id/firstname_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Voornaam"
            android:textSize="20sp"
            android:textColor="@color/warmgray"/>

        <TextView
            android:id="@+id/lastname_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/detail_lastname"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastname_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Achternaam"
            android:textSize="20sp"
            android:textColor="@color/warmgray"/>

        <TextView
            android:id="@+id/birthdate_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/detail_birthdate"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/birthdate_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Geboortedatum"
            android:textSize="20sp"
            android:textColor="@color/warmgray"/>

        <TextView
        android:id="@+id/detail_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="Adres"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/address_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Adres"
            android:textSize="20sp"
            android:textColor="@color/warmgray"/>

        <TextView
            android:id="@+id/detail_postalCode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Postcode"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postalCode_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Postcode"
            android:textSize="20sp"
            android:textColor="@color/warmgray"/>

        <TextView
            android:id="@+id/detail_city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Gemeente"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Gemeente"
            android:textSize="20sp"
            android:textColor="@color/warmgray"/>

        <!-- De knoppen -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:background="@color/orange"
                android:text="@string/button_update"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:background="@color/darkred"
                android:text="@string/button_delete"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>