<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstname_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/detail_firstname"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/firstname_firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Voornaam"
                android:textColor="@color/darkgray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lastname_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/detail_lastname"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastname_firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Achternaam"
                android:textColor="@color/darkgray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/birthdate_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/detail_birthdate"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birthdate_firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:width="20dp"
                android:height="30dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Geboortedatum"
                android:textColor="@color/darkgray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detail_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Adres"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Adres"
                android:textColor="@color/darkgray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detail_zipcode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Postcode"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/zipcode_firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Postcode"
                android:textColor="@color/darkgray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detail_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Gemeente"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Gemeente"
                android:textColor="@color/darkgray"
                android:textSize="20sp" />

            <!-- De knoppen -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="17dp"
                    android:background="@color/orange"
                    android:text="@string/button_update"
                    android:textColor="#FFFFFF" />

            </LinearLayout>




        </LinearLayout>


    </LinearLayout>
</ScrollView>